--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "devDependencies": {
-    "@types/config": "^0.0.40",
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.11.6",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
-  },
-  "dependencies": {
-    "config": "^3.3.6",
-    "express": "^4.17.1",
-    "mysql2": "^2.3.2",
-    "sequelize": "^6.9.0"
-  }
+    "name": "ts-sequelize",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "dev": "ts-node-dev --clear --respawn --transpile-only src/app.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "devDependencies": {
+        "@types/config": "^0.0.40",
+        "@types/express": "^4.17.13",
+        "@types/node": "^16.11.6",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^4.4.4"
+    },
+    "dependencies": {
+        "config": "^3.3.6",
+        "express": "^4.17.1",
+        "mysql2": "^2.3.2",
+        "sequelize": "^6.9.0"
+    }
 }
